[KARAF-6878]Fix WARNING: package org.apache.karaf.specs.locator not in java.base